--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
 NEXT_PUBLIC_NEON_DATABASE_URL=
+AUTH_GOOGLE_ID=
+AUTH_GOOGLE_SECRET=
+AUTH_SECRET=
+AUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3000
+NEXT_PUBLIC_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
